fixed contact padding and div widht con smaller sizes

--- a/src/views/styles/Perfil.css
+++ b/src/views/styles/Perfil.css
@@ -82,16 +82,21 @@
 
     .projects-main-container {
         grid-template-columns: 1fr;
-    }
-
-    .contact-main-container {
+      }
+      
+      .contact-main-container {
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 20px 10px;
 
     }
     
     .contact-right, .contact-left {
       margin-top: 0;
+    }
+
+    .contact-main-container div {
+      width: 95%;
     }
 }
